<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"> </string>
    <string name="bpal">B.Pal</string>
    <string name="login_with_personal_credentials">Login with personal credentials!</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_successfully_logged_in_b.pal">You have successfully logged in B.Pal</string>
    <string name="lets_create_b.pal_profile">Let\'s create B.Pal Profile!</string>
    <string name="create_profile">Create Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="location">Location</string>
    <string name="pune_2">Pune - 2</string>
    <string name="pune_3">Pune - 3</string>
    <string name="interests">Interests</string>
    <string name="tech_related">(Tech Related)</string>
    <string name="hobbies">(Hobbies)</string>
    <string name="about_yourself">About Yourself</string>
    <string name="max_30_words">(Max. 30 words)</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="work_experience">Work Experience(Overall)</string>
    <string name="overall">Overall</string>
    <string name="less_than_a_year">Less than a Year</string>
    <string name="_0_to_3_years">0 to 3 Years</string>
    <string name="_3_to_6_years">3 to 6 Years</string>
    <string name="_6_to_9_years">6 to 9 Years</string>
    <string name="_9_to_12_years">9 to 12 Years</string>
    <string name="more_than_12_years">More than 12 Years</string>
    <string name="today_13th_july_2017">Today, 13th July 2017</string>

    <string name="economic_concepts_consumers_need_to_know">Economic concepts consumers need to know</string>
    <string name="the_over_the_counter_is_not_an_actual_exchange_like_the_nyse_or_nasdaq_instead_it_is_a_network_of_companies_that">
        The over-the-counter market is not an actual exchange like the NYSE or Nasdaq. Instead it is a network of companies that...
    </string>

    <string name="_6_technology_trends_that_arent_ai_blockchain_or_vr">6 Technology Trends That Aren\'t AI, Blockchain or VR</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable_content_of_a_page_when_looking_at_its">
        It is a long establish fact that a reader will be distracted by the readable content of a page when looking at its...</string>

    <string name="the_near_future_of_technology">The (Near) Future of Technology</string>



    <string name="more_tech_bites">More Tech Bites</string>

    <string name="_13th_july_2017">13th July 2017</string>

    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="save_post">Save Post</string>

    <string name="mark_weins">Mark Weins</string>
    <string name="a_must_read_for_people_investing_in_consumer_products_and_technology">A must read for people investing in consumer products and technology</string>

    <string name="molly_rodge">Molly Rodge</string>
    <string name="very_helpful_would_definitely_use_these_tips_for_my_car_thanks">
        Very helpful.Would definitelt use these tips for my car. Thanks!
    </string>

    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industrys_standard_dummy_text_ever_since_the_1500s_when_an_unknwon_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of
        type and scrambled it to make a type specimen book. It has survived not only five centuries , but also the leap into electronic typesetting,
        remaining essentially unchanged.
    </string>


    <string name="_3rd_july_2017">3rd July 2017</string>
    <string name="_43">43</string>
    <string name="comma">,</string>
    <string name="tech_query">Tech query : </string>
    <string name="looking_for_html_css_expertise_no_of_req_5">Looking for HTML/CSS expertise, No. of req. 5</string>
    <string name="priyanka_chhetri">Priyanka Chhetri</string>


    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>


    <string name="refine_your_interests">Refine Your Interests</string>

    <string name="most_trending">Most Trending</string>
    <string name="most_recent">Most Recent</string>


    <string name="travel">Travel</string>
    <string name="food">Food</string>
    <string name="fitness_and_wellness">Fitness &amp; Wellness</string>
    <string name="technology">Technology</string>
    <string name="party">Party</string>

    <string-array name="location">
        <item>@string/location</item>
        <item>@string/pune_2</item>
        <item>@string/pune_3</item>
    </string-array>

    <string-array name="work_experience">
        <item>@string/work_experience</item>
        <item>@string/_0_to_3_years</item>
        <item>@string/_3_to_6_years</item>
        <item>@string/_6_to_9_years</item>
        <item>@string/_9_to_12_years</item>
        <item>@string/more_than_12_years</item>

    </string-array>

    <string name="whats_up">What\'s Up</string>
    <string name="tech_bites">Tech Bites</string>
    <string name="bazaar">Bazaar</string>
    <string name="connect">Connect</string>


    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="quiz">Quiz</string>
    <string name="my_feedback">My Feedback</string>
    <string name="saved_posts_and_adds">Saved Posts and Ads</string>
    <string name="settings">Settings</string>
    <string name="assist">Assist</string>
    <string name="logout">Logout</string>

    <string name="human_resource">Human Resource</string>
    <string name="security">Security</string>
    <string name="it_department">IT Department</string>
    <string name="transport_facility">Transport Facility</string>
    <string name="b.pal_assit">B.Pal Assist</string>


    <string name="how_will_you_rate_your_safety_at_a_workplace">
        How will you rate your safety at a work-place?</string>
    <string name="tell_us_more">Tell us more...</string>

    <string name="alok_dekhane">Alok Dekhane</string>
    <string name="_1st_july_2017">1st July 2017</string>
    <string name="inspirational">Inspirational</string>
    <string name="worth_visiting_place_mahabaleshwar">Worth visiting place : Mahabaleshwar:)</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


</resources>
