<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all" >
        <item
            android:id="@+id/nav_most_trending"
            android:title="@string/most_trending" />
        <item
            android:id="@+id/nav_most_recent"
            android:title="@string/most_recent" />
    </group>
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_travel"
            android:title="@string/travel" />
        <item
            android:id="@+id/nav_food"
            android:title="@string/food" />
        <item
            android:id="@+id/nav_fitnees_and_wellness"
            android:title="@string/fitness_and_wellness" />
        <item
            android:id="@+id/nav_technology"
            android:title="@string/technology" />
        <item
            android:id="@+id/nav_party"
            android:title="@string/party" />
    </group>


</menu>