<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linear_layout_image"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ic_action_profile_app_bar_image">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/system_display_regular"
            android:text="@string/create_profile"
            android:textColor="@color/text_color_white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_image"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_image"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/text_color_grey"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edt_profile_name"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/edittext_color"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/bPalFontColor"
                android:cursorVisible="true"
                android:textCursorDrawable="@color/bPalFontColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textColor="@color/text_color_grey"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edt_age"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/edittext_color"
                android:inputType="date"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/bPalFontColor"
                android:cursorVisible="true"
                android:textCursorDrawable="@color/bPalFontColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/text_color_grey"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edt_birthday"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/edittext_color"
                android:inputType="date"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/bPalFontColor"
                android:cursorVisible="true"
                android:textCursorDrawable="@color/bPalFontColor"/>


        </LinearLayout>



        <!--<ImageButton
            android:id="@+id/imgbtn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/image_shape" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/image_shape"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_action_profile_picture"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linear_layout_one"
        >



        <Spinner
            android:id="@+id/spinner_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:entries="@array/location"
            android:layout_marginEnd="100dp"

            >

        </Spinner>


        <Spinner
            android:id="@+id/spinner_work_experience"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:entries="@array/work_experience"
            android:layout_marginEnd="100dp"
            >

        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interests"
            android:textColor="@color/text_color_black"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tech_related"
                android:textColor="@color/text_color_grey"
                android:textSize="12sp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/edt_interests_tech_related"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/edittext_color"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/bPalFontColor"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interests"
            android:textColor="@color/text_color_black"
            android:textSize="12sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textColor="@color/text_color_grey"
            android:textSize="12sp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

        <EditText
            android:id="@+id/edt_interests_hobbies"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/edittext_color"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/bPalFontColor"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_yourself"
            android:textColor="@color/text_color_black"
            android:textSize="12sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_30_words"
            android:textColor="@color/text_color_grey"
            android:textSize="12sp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

        <EditText
            android:id="@+id/edt_interests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edittext_color"
            android:lines="2"
            android:minLines="2"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/bPalFontColor"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:maxLines="2"/>






    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout_two"
        android:weightSum="2"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_skip"
            android:text="@string/skip"
            android:textColor="@color/btn_color_orange"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/button_shape_skip"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btn_submit"
            android:text="@string/submit"
            android:textColor="@color/text_color_white"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/button_shape_submit"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            />
    </LinearLayout>

    </RelativeLayout>

</ScrollView>