<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_whats_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="2"
    >

    <LinearLayout
        android:id="@+id/linear_layout_what_up_left_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="20dp">

            <LinearLayout
                android:id="@+id/linear_layout_profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/image_shape"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle_img_profile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_action_profile_picture" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_profile_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_card_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/alok_dekhane"
                    android:textColor="@color/text_color_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_card_post_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/inspirational"
                    android:textColor="@color/bPalFontColor"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txt_card_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/_1st_july_2017"
                    android:textColor="@color/text_color_grey"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:orientation="vertical"

                >

                <TextView
                    android:id="@+id/txt_post_heading"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/worth_visiting_place_mahabaleshwar"
                    android:textColor="@color/text_color_black"
                    android:textSize="17sp" />



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/img_group_photo_one"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_action_group_photo_one" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_action_group_photo_two" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_action_group_photo_three" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_action_group_photo_four" />

                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_whats_up_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>